--- a/app/src/main/res/layout/storeitem.xml
+++ b/app/src/main/res/layout/storeitem.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:id="@+id/store_text"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical"
