--- a/app/src/main/res/layout/fragment_mystore.xml
+++ b/app/src/main/res/layout/fragment_mystore.xml
@@ -9,7 +9,7 @@
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/store_scroll"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
@@ -52,8 +52,7 @@
                 android:id="@+id/ta_frame"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="10dp"
                 android:background="#FFEFD8"
                 android:orientation="vertical"
                 android:padding="10dp">
@@ -94,8 +93,7 @@
                 android:id="@+id/eh_frame"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="10dp"
                 android:background="#FFEFD8"
                 android:orientation="vertical"
                 android:padding="10dp">
