Edit(메뉴추가) 구현, 위치설정 추가

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -90,7 +90,7 @@
             <ScrollView
                 android:id="@+id/menu_scroll"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fillViewport="true">
 
                 <androidx.gridlayout.widget.GridLayout
