--- a/app/src/main/res/layout/fragment_editstore.xml
+++ b/app/src/main/res/layout/fragment_editstore.xml
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/edit_complete"
+            android:text="@string/add_menu"
             app:layout_constraintEnd_toEndOf="@+id/edit_store_loc_y"
             app:layout_constraintStart_toStartOf="@+id/edit_store_loc_y"
             app:layout_constraintTop_toBottomOf="@+id/edit_store_loc_y" />
